--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -84,3 +84,88 @@ body {
 		@apply bg-background text-foreground;
 	}
 }
+
+.embla {
+	margin: auto;
+	--slide-height: 10rem; /* Reduced height */
+	--slide-spacing: 0.5rem; /* Reduced spacing */
+	--slide-size: 80%; /* Reduced size */
+}
+
+.embla__viewport {
+	overflow: hidden;
+}
+
+.embla__container {
+	display: flex;
+	touch-action: pan-x pinch-zoom;
+	margin-top: calc(var(--slide-spacing) * -1);
+	height: calc(var(--slide-spacing) + var(--slide-height));
+	flex-direction: column;
+}
+
+.embla__slide {
+	transform: translate3d(0, 0, 0);
+	flex: 0 0 var(--slide-size);
+	min-height: 0;
+	padding-top: var(--slide-spacing);
+}
+
+.embla__slide__number {
+	box-shadow: inset 0 0 0 0.1rem var(--detail-medium-contrast); /* Reduced shadow */
+	border-radius: 1rem; /* Reduced border radius */
+	font-size: 2rem; /* Reduced font size */
+	font-weight: 500; /* Adjusted font weight */
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	height: 100%;
+	user-select: none;
+}
+
+.embla__controls {
+	display: grid;
+	grid-template-columns: auto 1fr;
+	justify-content: space-between;
+	gap: 0.6rem; /* Reduced gap */
+	margin-top: 1rem; /* Reduced margin */
+}
+
+.embla__buttons {
+	display: grid;
+	grid-template-columns: repeat(2, 1fr);
+	gap: 0.3rem; /* Reduced gap */
+	align-items: center;
+}
+
+.embla__button {
+	-webkit-tap-highlight-color: rgba(var(--text-high-contrast-rgb-value), 0.5);
+	-webkit-appearance: none;
+	appearance: none;
+	background-color: transparent;
+	touch-action: manipulation;
+	display: inline-flex;
+	text-decoration: none;
+	cursor: pointer;
+	border: 0;
+	padding: 0;
+	margin: 0;
+	box-shadow: inset 0 0 0 0.1rem var(--detail-medium-contrast); /* Reduced shadow */
+	width: 2.4rem; /* Reduced width */
+	height: 2.4rem; /* Reduced height */
+	z-index: 1;
+	border-radius: 50%;
+	color: var(--text-body);
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
+
+.embla__button:disabled {
+	color: var(--detail-high-contrast);
+}
+
+.embla__button__svg {
+	width: 25%; /* Reduced size */
+	height: 25%; /* Reduced size */
+}
